--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,7 +207,7 @@
   width: 100%;
   height: 800px;
   background: linear-gradient(0deg, #0627358c 90%, #06273500 10%),
-    url(/assets/images/foto\ para\ agencia\ de\ viajes.jpg);
+    url(../images/foto\ para\ agencia\ de\ viajes.jpg);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -290,7 +290,7 @@
   width: 100%;
   height: 1000px;
   background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-    url(/assets/images/LA7_1292.jpg);
+    url(../images/LA7_1292.jpg);
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
