--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -207,7 +207,7 @@
   width: 100%;
   height: 800px;
   background: linear-gradient(0deg, #0627358c 90%, #06273500 10%),
-    url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+    url(../images/secondary-img.jpg);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
