--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -123,7 +123,7 @@
         width: 100%;
         height: 700px;
         background: linear-gradient(0deg, #0627358c 90%, #06273500 10%),
-          url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+          url(../images/secondary-img.jpg);
         background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -207,7 +207,7 @@
         width: 100%;
         height: 700px;
         background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-          url(../images/LA7_1292.jpg);
+          url(../images/terciary-img.jpg);
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -602,7 +602,7 @@
         width: 100%;
         height: 600px;
         background: linear-gradient(0deg, #0627358c 90%, #06273500 10%),
-          url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+          url(../images/secondary-img.jpg);
         background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -686,7 +686,7 @@
         width: 100%;
         height: 600px;
         background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-          url(../images/LA7_1292.jpg);
+          url(../images/terciary-img.jpg);
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1083,7 +1083,7 @@
         width: 100%;
         height: 500px;
         background: linear-gradient(0deg, #0627358c 90%, #06273500 10%),
-          url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+          url(../images/secondary-img.jpg);
         background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1167,7 +1167,7 @@
         width: 100%;
         height: 600px;
         background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-          url(../images/LA7_1292.jpg);
+          url(../images/terciary-img.jpg);
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1563,7 +1563,7 @@
         width: 100%;
         height: 450px;
         background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-          url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+          url(../images/secondary-img.jpg);
         background-position: center top;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1647,7 +1647,7 @@
         width: 100%;
         height: 500px;
         background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-          url(../images/LA7_1292.jpg);
+          url(../images/terciary-img.jpg);
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: cover;
@@ -2085,7 +2085,7 @@
     width: 100%;
     height: 300px;
     background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-      url(../images/foto\ para\ agencia\ de\ viajes.jpg);
+      url(../images/secondary-img.jpg);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2169,7 +2169,7 @@
     width: 100%;
     height: 400px;
     background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-      url(../images/LA7_1292.jpg);
+      url(../images/terciary-img.jpg);
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
