--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,7 +290,7 @@
   width: 100%;
   height: 1000px;
   background: linear-gradient(0deg, #0627358c 100%, #06273500 10%),
-    url(../images/LA7_1292.jpg);
+    url(../images/terciary-img.jpg);
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
