--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -90,9 +90,12 @@
   background: linear-gradient(
     0deg,
     rgba(16, 184, 255, 1) 4%,
-    rgba(106, 218, 231, 1) 48%,
-    rgba(189, 219, 107, 1) 100%
-  );
+    rgba(88, 143, 0, 0.301) 48%,
+    rgba(189, 219, 107, 0.26) 100%
+  ), url(../images/DJI_0801.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
@@ -332,12 +335,11 @@
   color: white;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 200px 700px 200px;
+  grid-template-rows: 200px 800px 200px;
   grid-template-areas:
     "post-title"
     "post-info"
     "post-btn";
-  gap: 20px;
 }
 .post-title {
   width: 100%;
@@ -352,7 +354,7 @@
   grid-area: post-info;
 }
 .post-info p {
-  font-size: 1.9rem;
+  font-size: 1.7rem;
 }
 .post-info span {
   font-size: 1.7rem;
@@ -385,12 +387,11 @@
   color: #062735;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 200px 700px 200px;
+  grid-template-rows: 200px 800px 200px;
   grid-template-areas:
     "vote-title"
     "vote-info"
     "vote-btn";
-  gap: 20px;
 }
 .vote-title {
   width: 100%;
@@ -405,7 +406,7 @@
   grid-area: vote-info;
 }
 .vote-info p {
-  font-size: 1.9rem;
+  font-size: 1.8rem;
 }
 .vote-info span {
   font-size: 1.7rem;
@@ -615,12 +616,19 @@ footer {
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
-  width: 90%;
-  max-width: 500px;
+  width: 800px;
+  height: auto;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
+.modal-content img{
+  width: 400px;
+  height: auto;
+  object-fit: cover;
+}
 /* Botón de cerrar */
 .close {
   color: #aaa;
@@ -635,17 +643,13 @@ footer {
   color: #000;
 }
 
-/* Botón principal */
-#postularBtn {
-  background-color: #007bff00;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-}
 
-#postularBtn:hover {
-  background-color: #0057b300;
+.postularBtn{
+  width: 200px;
+  height: 60px;
+  font-weight: 600;
+  border-style: none;
+  border-radius: 20px;
+  background-color: #062735;
+  color: white;
 }
